--- a/crates/cheatcodes/spec/Cargo.toml
+++ b/crates/cheatcodes/spec/Cargo.toml
@@ -23,7 +23,7 @@ serde.workspace = true
 schemars = { version = "0.8", optional = true }
 
 [dev-dependencies]
-serde_json.workspace = true
+serde_json = { workspace = true, features = ["std"] }
 
 [features]
 schema = ["dep:schemars"]
