--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -40,7 +40,7 @@ indicatif.workspace = true
 itertools.workspace = true
 rayon.workspace = true
 regex = { workspace = true, default-features = false }
-serde_json.workspace = true
+serde_json = { workspace = true, features = ["std"] }
 serde.workspace = true
 strsim = "0.11"
 strum = { workspace = true, features = ["derive"] }
