--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -62,7 +62,7 @@ path-slash.workspace = true
 reqwest.workspace = true
 semver.workspace = true
 serde = { workspace = true, features = ["derive"] }
-serde_json.workspace = true
+serde_json = { workspace = true, features = ["std"] }
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
