--- a/crates/forge/Cargo.toml
+++ b/crates/forge/Cargo.toml
@@ -69,7 +69,7 @@ parking_lot.workspace = true
 regex = { workspace = true, default-features = false }
 reqwest = { workspace = true, features = ["json"] }
 semver.workspace = true
-serde_json.workspace = true
+serde_json = { workspace = true, features = ["std"] }
 similar = { version = "2", features = ["inline"] }
 solang-parser.workspace = true
 solar-parse.workspace = true
