--- a/crates/sol-macro-gen/Cargo.toml
+++ b/crates/sol-macro-gen/Cargo.toml
@@ -23,6 +23,6 @@ proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
 prettyplease.workspace = true
-serde_json.workspace = true
+serde_json = { workspace = true, features = ["std"] }
 
 eyre.workspace = true
