--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -21,7 +21,59 @@ required-features = ["cli"]
 [dependencies]
 # foundry internal
 substrate-runtime = { path = "substrate-runtime"}
-polkadot-sdk = { workspace = true, features = ["node"] }
+polkadot-sdk = { workspace = true, features = [
+    "sc-allocator",
+	"sc-authority-discovery",
+	"sc-basic-authorship",
+	"sc-block-builder",
+	"sc-chain-spec",
+	"sc-cli",
+	"sc-client-api",
+	"sc-client-db",
+	"sc-consensus",
+	"sc-consensus-manual-seal",
+    "sc-executor",
+	"sc-executor-common",
+	"sc-executor-wasmtime",
+	"sc-informant",
+	"sc-keystore",
+	"sc-network",
+	"sc-network-common",
+	"sc-network-gossip",
+	"sc-network-light",
+	"sc-network-statement",
+	"sc-network-sync",
+	"sc-network-transactions",
+	"sc-network-types",
+    "sc-rpc",
+	"sc-rpc-api",
+	"sc-rpc-server",
+	"sc-rpc-spec-v2",
+	"sc-runtime-utilities",
+	"sc-service",
+	"sc-state-db",
+    "sc-sync-state-rpc",
+	"sc-sysinfo",
+	"sc-telemetry",
+	"sc-tracing",
+	"sc-transaction-pool",
+	"sc-transaction-pool-api",
+	"sc-utils",
+	"sp-blockchain",
+	"sp-consensus",
+	"sp-core-hashing",
+	"sp-core-hashing-proc-macro",
+	"sp-database",
+	"sp-maybe-compressed-blob",
+	"sp-panic-handler",
+	"sp-rpc",
+	"std",
+    "substrate-frame-rpc-support",
+	"substrate-frame-rpc-system",
+	"substrate-rpc-client",
+	"substrate-wasm-builder",
+	"tracing-gum",
+] }
 anvil-core.workspace = true
 anvil-server.workspace = true
 anvil-rpc.workspace = true
