add scaffolding for executor and runner
Signed-off-by: Alexandru Gheorghe <alexandru.gheorghe@parity.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ members = [
     "crates/macros/",
     "crates/test-utils/",
     "crates/revive-env",
+    "crates/revive-strategy",
 ]
 resolver = "2"
 
@@ -187,6 +188,8 @@ foundry-macros = { path = "crates/macros" }
 foundry-test-utils = { path = "crates/test-utils" }
 foundry-wallets = { path = "crates/wallets" }
 foundry-linking = { path = "crates/linking" }
+revive-env = { path = "crates/revive-env"}
+revive-strategy = { path = "crates/revive-strategy"}
 
 # solc & compilation utilities
 foundry-block-explorers = { version = "0.13.3", default-features = false }
