--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -22,6 +22,7 @@ foundry-wallets.workspace = true
 
 foundry-compilers = { workspace = true, features = ["full"] }
 foundry-block-explorers.workspace = true
+revive-strategy.workspace = true
 
 alloy-eips.workspace = true
 alloy-dyn-abi.workspace = true
