--- a/deny.toml
+++ b/deny.toml
@@ -11,10 +11,10 @@ ignore = [
     "RUSTSEC-2024-0437",
     # https://rustsec.org/advisories/RUSTSEC-2025-0021 gitoxide uses SHA-1 hash implementations without any collision detection, leaving it vulnerable to hash collision attacks.
     "RUSTSEC-2025-0021",
-    # https://rustsec.org/advisories/RUSTSEC-2022-0061 parity-wasm is unmaintained
+    # https://rustsec.org/advisories/RUSTSEC-2022-0061 parity-wasm deprecated by the author
     "RUSTSEC-2022-0061",
-    # https://rustsec.org/advisories/RUSTSEC-2024-0370  proc-macro-error is unmaintained
-    "RUSTSEC-2024-0370"
+    # https://rustsec.org/advisories/RUSTSEC-2024-0370 proc-macro-error is unmaintained
+    "RUSTSEC-2024-0370",
 ]
 
 # This section is considered when running `cargo deny check bans`.
