--- a/crates/anvil-polkadot/substrate-runtime/Cargo.toml
+++ b/crates/anvil-polkadot/substrate-runtime/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 repository.workspace = true
 edition.workspace = true
 publish = false
+license.workspace = true
 
 [dependencies]
 array-bytes = { version = "6.2.2", default-features = false }
