--- a/.github/workflows/nextest.yml
+++ b/.github/workflows/nextest.yml
@@ -99,21 +99,27 @@ jobs:
           path: ~/.cargo/bin/eth-rpc
           key: eth-rpc-${{ matrix.runner_label }}-${{ env.ETH_RPC_VERSION }}
 
-      - name: Install system deps (Linux)
-        if:
-          (steps.cache-substrate.outputs.cache-hit != 'true' || steps.cache-ethrpc.outputs.cache-hit != 'true')
-          && contains(matrix.runner_label, 'ubuntu')
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y protobuf-compiler
+      - name: Install protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "32.0"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install system deps (macOS)
-        if:
-          (steps.cache-substrate.outputs.cache-hit != 'true' || steps.cache-ethrpc.outputs.cache-hit != 'true')
-          && contains(matrix.runner_label, 'macos')
-        run: |
-          brew update
-          brew install protobuf
+#      - name: Install system deps (Linux)
+#        if:
+#          (steps.cache-substrate.outputs.cache-hit != 'true' || steps.cache-ethrpc.outputs.cache-hit != 'true')
+#          && contains(matrix.runner_label, 'ubuntu')
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y protobuf-compiler
+#
+#      - name: Install system deps (macOS)
+#        if:
+#          (steps.cache-substrate.outputs.cache-hit != 'true' || steps.cache-ethrpc.outputs.cache-hit != 'true')
+#          && contains(matrix.runner_label, 'macos')
+#        run: |
+#          brew update
+#          brew install protobuf
 
       - name: Build substrate-node (if not cached)
         if: steps.cache-substrate.outputs.cache-hit != 'true' && !contains(matrix.runner_label, 'windows')
