--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@nightly
       - name: Add wasm target
-        run: rustup target add wasm32-unknown-unknown --toolchain nightly
+        run: rustup target add wasm32-unknown-unknown --toolchain nightly-x86_64-unknown-linux-gnu
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
@@ -83,7 +83,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@clippy
       - name: Add wasm target
-        run: rustup target add wasm32-unknown-unknown --toolchain nightly
+        run: rustup target add wasm32-unknown-unknown --toolchain nightly-x86_64-unknown-linux-gnu
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
