--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - name: Add wasm target
         run: rustup target add wasm32-unknown-unknown --toolchain nightly-x86_64-unknown-linux-gnu
+      - name: Add rust-src
+        run: rustup component add rust-src --toolchain nightly
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
@@ -57,6 +59,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - name: Add wasm target
         run: rustup target add wasm32-unknown-unknown
+      - name: Add rust-src
+        run: rustup component add rust-src --toolchain nightly
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
@@ -84,6 +88,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@clippy
       - name: Add wasm target
         run: rustup target add wasm32-unknown-unknown --toolchain nightly-x86_64-unknown-linux-gnu
+      - name: Add rust-src
+        run: rustup component add rust-src --toolchain nightly
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
