--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,10 +27,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@nightly
+        with:
+          version: nightly-2025-08-22
       - name: Add wasm target
-        run: rustup target add wasm32-unknown-unknown --toolchain nightly-x86_64-unknown-linux-gnu
+        run: rustup target add wasm32-unknown-unknown --toolchain nightly-2025-08-22
       - name: Add rust-src
-        run: rustup component add rust-src --toolchain nightly
+        run: rustup component add rust-src --toolchain nightly-2025-08-22
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
@@ -58,9 +60,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - name: Add wasm target
-        run: rustup target add wasm32-unknown-unknown
+        run: rustup target add wasm32-unknown-unknown --toolchain stable
       - name: Add rust-src
-        run: rustup component add rust-src --toolchain nightly
+        run: rustup component add rust-src --toolchain stable
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
@@ -86,10 +88,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@clippy
+        with:
+          toolchain: nightly-2024-02-03
+          components: rustfmt, clippy
       - name: Add wasm target
-        run: rustup target add wasm32-unknown-unknown --toolchain nightly-x86_64-unknown-linux-gnu
+        run: rustup target add wasm32-unknown-unknown --toolchain nightly-2024-02-03
       - name: Add rust-src
-        run: rustup component add rust-src --toolchain nightly
+        run: rustup component add rust-src --toolchain nightly-2024-02-03
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
