--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,12 +89,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@clippy
         with:
-          toolchain: nightly-2024-02-03
-          components: rustfmt, clippy
+          toolchain: clippy
       - name: Add wasm target
-        run: rustup target add wasm32-unknown-unknown --toolchain nightly-2024-02-03
+        run: rustup target add wasm32-unknown-unknown --toolchain clippy
       - name: Add rust-src
-        run: rustup component add rust-src --toolchain nightly-2024-02-03
+        run: rustup component add rust-src --toolchain clippy
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
