--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,12 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@nightly-2024-08-21
+          toolchain: nightly-2024-08-21
       - name: Add wasm target
-        run: rustup target add wasm32-unknown-unknown --toolchain stable
+        run: rustup target add wasm32-unknown-unknown --toolchain nightly-2024-08-21
       - name: Add rust-src
-        run: rustup component add rust-src --toolchain stable
+        run: rustup component add rust-src --toolchain nightly-2024-08-21
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
