--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@nightly-2024-08-21
+      - uses: dtolnay/rust-toolchain@nightly
         with:
           toolchain: nightly-2024-08-21
       - name: Add wasm target
