--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,12 +89,12 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@clippy
         with:
-          toolchain: nightly
+          toolchain: nightly-2024-02-03
           components: clippy
       - name: Add wasm target
-        run: rustup target add wasm32-unknown-unknown --toolchain nightly
+        run: rustup target add wasm32-unknown-unknown --toolchain nightly-2024-02-03
       - name: Add rust-src
-        run: rustup component add rust-src --toolchain nightly
+        run: rustup component add rust-src --toolchain nightly-2024-02-03
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
