--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,11 +28,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@nightly
         with:
-          toolchain: nightly-2025-08-21
+          toolchain: nightly-2025-08-21-x86_64-unknown-linux-gnu
       - name: Add wasm target
-        run: rustup target add wasm32-unknown-unknown --toolchain nightly-2025-08-21
+        run: rustup target add wasm32v1-none --toolchain nightly-2025-08-21-x86_64-unknown-linux-gnu
       - name: Add rust-src
-        run: rustup component add rust-src --toolchain nightly-2025-08-21
+        run: rustup component add rust-src --toolchain nightly-2025-08-21-x86_64-unknown-linux-gnu
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
