--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -19,6 +19,7 @@ path = "bin/main.rs"
 
 [dependencies]
 # foundry internal
+jsonrpsee = { version = "0.24.3", features = ["server"] }
 substrate-runtime = { path = "substrate-runtime" }
 polkadot-sdk = { version = "2507.1.0", default-features = false, features = [
     "sc-allocator",
@@ -58,6 +59,7 @@ polkadot-sdk = { version = "2507.1.0", default-features = false, features = [
 	"substrate-rpc-client",
 	"substrate-wasm-builder",
 ] }
+anvil.workspace = true
 anvil-core.workspace = true
 anvil-server = { workspace = true, features = ["clap"] }
 anvil-rpc.workspace = true
