--- a/Cargo.toml
+++ b/Cargo.toml
@@ -202,8 +202,8 @@ foundry-block-explorers = { version = "0.13.3", default-features = false }
 foundry-compilers = { version = "0.14.0", default-features = false }
 foundry-fork-db = "0.16.0"
 solang-parser = { version = "=0.3.9", package = "foundry-solang-parser" }
-solar-parse = { version = "=0.1.2", default-features = false }
-solar-sema = { version = "=0.1.2", default-features = false }
+solar-parse = { version = "=0.1.6", default-features = false }
+solar-sema = { version = "=0.1.6", default-features = false }
 
 ## revm
 revm = { version = "27.0.2", default-features = false }
@@ -234,19 +234,19 @@ alloy-transport-ipc = { version = "1.0.22", default-features = false }
 alloy-transport-ws = { version = "1.0.22", default-features = false }
 
 ## alloy-core
-alloy-dyn-abi = "0.8.22"
-alloy-json-abi = "0.8.22"
-alloy-primitives = { version = "0.8.22", features = [
+alloy-dyn-abi = "1.3.0"
+alloy-json-abi = "1.3.0"
+alloy-primitives = { version = "1.3.0", features = [
     "getrandom",
     "rand",
     "map-fxhash",
     "map-foldhash",
 ] }
-alloy-sol-macro-expander = "0.8.22"
-alloy-sol-macro-input = "0.8.22"
-alloy-sol-types = "0.8.22"
+alloy-sol-macro-expander = "1.3.0"
+alloy-sol-macro-input = "1.3.0"
+alloy-sol-types = "1.3.0"
 
-alloy-chains = "0.1"
+alloy-chains = "0.2.9"
 alloy-rlp = "0.3"
 alloy-trie = "0.7.0"
 
@@ -348,7 +348,7 @@ idna_adapter = "=1.1.0"
 # syn-solidity = { path = "../../alloy-rs/core/crates/syn-solidity" }
 
 ## alloy
-foundry-compilers = { git = "https://github.com/paritytech/foundry-compilers-polkadot.git", branch = "main" }
+foundry-compilers = { path = "../foundry-compilers-polkadot/crates/compilers" }
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 # alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
