--- a/Cargo.toml
+++ b/Cargo.toml
@@ -348,7 +348,7 @@ idna_adapter = "=1.1.0"
 # syn-solidity = { path = "../../alloy-rs/core/crates/syn-solidity" }
 
 ## alloy
-foundry-compilers = { path = "../foundry-compilers-polkadot/crates/compilers" }
+foundry-compilers = { git = "https://github.com/paritytech/foundry-compilers-polkadot.git", branch = "AndreiEres/revm" }
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 # alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
