--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,7 +109,6 @@ lalrpop-util.opt-level = 3
 solar-ast.opt-level = 3
 solar-data-structures.opt-level = 3
 solar-interface.opt-level = 3
-solar-parse.opt-level = 3
 
 # EVM.
 alloy-dyn-abi.opt-level = 3
@@ -198,12 +197,11 @@ revive-env = { path = "crates/revive-env" }
 revive-strategy = { path = "crates/revive-strategy" }
 
 # solc & compilation utilities
-foundry-block-explorers = { version = "0.14.0", default-features = false }
-foundry-compilers = { version = "0.14.0", default-features = false }
+foundry-block-explorers = { version = "0.22.0", default-features = false }
+foundry-compilers = { version = "0.19.1", default-features = false }
 foundry-fork-db = "0.16.0"
 solang-parser = { version = "=0.3.9", package = "foundry-solang-parser" }
-solar-parse = { version = "=0.1.6", default-features = false }
-solar-sema = { version = "=0.1.6", default-features = false }
+solar = { package = "solar-compiler", version = "=0.1.6", default-features = false }
 
 ## revm
 revm = { version = "27.0.2", default-features = false }
@@ -348,7 +346,7 @@ idna_adapter = "=1.1.0"
 # syn-solidity = { path = "../../alloy-rs/core/crates/syn-solidity" }
 
 ## alloy
-foundry-compilers = { git = "https://github.com/paritytech/foundry-compilers-polkadot.git", branch = "AndreiEres/revm" }
+foundry-compilers = { path = "../foundry-compilers-polkadot/crates/compilers" }
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 # alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
