--- a/crates/evm/traces/Cargo.toml
+++ b/crates/evm/traces/Cargo.toml
@@ -41,7 +41,7 @@ tokio = { workspace = true, features = ["time", "macros"] }
 tracing.workspace = true
 tempfile.workspace = true
 rayon.workspace = true
-solar-parse.workspace = true
+solar.workspace = true
 revm.workspace = true
 
 [dev-dependencies]
