--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -45,6 +45,8 @@ alloy-transport.workspace = true
 alloy-consensus = { workspace = true, features = ["k256"] }
 alloy-network.workspace = true
 
+solar.workspace = true
+
 tower.workspace = true
 
 async-trait.workspace = true
