--- a/crates/evm/core/Cargo.toml
+++ b/crates/evm/core/Cargo.toml
@@ -34,6 +34,7 @@ alloy-consensus.workspace = true
 alloy-rpc-types.workspace = true
 alloy-sol-types.workspace = true
 foundry-fork-db.workspace = true
+alloy-evm.workspace = true
 
 revm = { workspace = true, features = [
     "std",
