--- a/crates/cheatcodes/Cargo.toml
+++ b/crates/cheatcodes/Cargo.toml
@@ -41,6 +41,7 @@ alloy-consensus = { workspace = true, features = ["k256", "kzg"] }
 alloy-network.workspace = true
 alloy-rlp.workspace = true
 alloy-chains.workspace = true
+alloy-evm.workspace = true
 
 base64.workspace = true
 dialoguer = "0.11"
