--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -32,6 +32,7 @@ alloy-primitives = { workspace = true, features = [
     "rlp",
 ] }
 alloy-sol-types.workspace = true
+alloy-evm.workspace = true
 revm = { workspace = true, default-features = false, features = [
     "std",
     "serde",
