--- a/Cargo.toml
+++ b/Cargo.toml
@@ -303,6 +303,7 @@ num-format = "0.4"
 parking_lot = "0.12"
 proptest = "1.7.0"
 rand = "0.9"
+rand_08 = { package = "rand", version = "0.8" }
 rayon = "1"
 regex = { version = "1", default-features = false }
 reqwest = { version = "0.12", default-features = false, features = [
