--- a/crates/cast/Cargo.toml
+++ b/crates/cast/Cargo.toml
@@ -27,6 +27,7 @@ foundry-common.workspace = true
 foundry-compilers.workspace = true
 foundry-config.workspace = true
 foundry-evm.workspace = true
+foundry-evm-core.workspace = true
 foundry-wallets.workspace = true
 
 alloy-chains.workspace = true
@@ -56,6 +57,7 @@ chrono.workspace = true
 eyre.workspace = true
 futures.workspace = true
 rand.workspace = true
+rand_08.workspace = true
 rayon.workspace = true
 serde_json.workspace = true
 serde.workspace = true
