--- a/Cargo.toml
+++ b/Cargo.toml
@@ -206,6 +206,7 @@ solar = { package = "solar-compiler", version = "=0.1.6", default-features = fal
 ## revm
 revm = { version = "29.0.0", default-features = false }
 revm-inspectors = { version = "0.29.0", features = ["serde"] }
+revm-context-interface = {version = "10.1.0" }
 op-revm = { version = "10.0.0", default-features = false }
 
 ## alloy-evm
@@ -250,12 +251,15 @@ alloy-sol-types = "1.3.0"
 
 alloy-chains = "0.2.9"
 alloy-rlp = "0.3"
-alloy-trie = "0.7.0"
+alloy-trie = "0.9"
 
 
 ## op-alloy
 op-alloy-consensus = "0.18.14"
 op-alloy-rpc-types = "0.18.14"
+
+alloy-hardforks = { version = "0.2.12", default-features = false }
+alloy-op-hardforks = { version = "0.2.12", default-features = false }
 
 ## cli
 anstream = "0.6"
