--- a/Cargo.toml
+++ b/Cargo.toml
@@ -349,7 +349,6 @@ soldeer-commands = "=0.6.1"
 soldeer-core = { version = "=0.6.1", features = ["serde"] }
 strum = "0.27"
 tempfile = "3.20"
-tikv-jemallocator = "0.5"
 tokio = "1"
 toml = "0.9"
 tower = "0.5"
@@ -361,6 +360,7 @@ vergen = { version = "8", default-features = false }
 yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }
 path-slash = "0.2"
 jiff = "0.2"
+serial_test = "2.0"
 heck = "0.5"
 uuid = "1.17.0"
 flate2 = "1.1"
@@ -385,7 +385,7 @@ idna_adapter = "=1.1.0"
 # syn-solidity = { path = "../../alloy-rs/core/crates/syn-solidity" }
 
 ## alloy
-foundry-compilers = { git = "https://github.com/paritytech/foundry-compilers-polkadot.git", branch = "main" }
+foundry-compilers = { git = "https://github.com/paritytech/foundry-compilers-polkadot.git", branch = "alexggh/merge-v0-18-2" }
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 # alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
