--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -20,7 +20,7 @@ path = "bin/main.rs"
 [dependencies]
 # foundry internal
 substrate-runtime = { path = "substrate-runtime" }
-polkadot-sdk = { version = "2507.1.0", default-features = false, features = [
+polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "acihodaru/foundry-polkadot", default-features = false, features = [
     "sc-allocator",
 	"sc-basic-authorship",
 	"sc-block-builder",
@@ -57,6 +57,7 @@ polkadot-sdk = { version = "2507.1.0", default-features = false, features = [
 	"substrate-frame-rpc-system",
 	"substrate-rpc-client",
 	"substrate-wasm-builder",
+	"pallet-revive-eth-rpc"
 ] }
 anvil-core.workspace = true
 anvil-server = { workspace = true, features = ["clap"] }
@@ -127,6 +128,8 @@ clap_complete = { version = "4" }
 chrono.workspace = true
 clap_complete_fig = "4"
 parity-scale-codec = "3.7.5"
+sqlx = "0.8.6"
+subxt = "0.41.0"
 
 [dev-dependencies]
 alloy-provider = { workspace = true, features = ["txpool-api"] }
