--- a/crates/revive-env/Cargo.toml
+++ b/crates/revive-env/Cargo.toml
@@ -16,15 +16,15 @@ std = ["polkadot-sdk/std"]
 codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
 scale-info = { version = "2.11.6", default-features = false }
 
-polkadot-sdk.version = "2507.1.0"
-polkadot-sdk.features = [
+
+polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "acihodaru/foundry-polkadot", features = [
     "experimental",
     "runtime",
     "polkadot-runtime-common",
     "pallet-revive",
     "pallet-balances",
     "pallet-timestamp"
-]
+] }
 
 
 [lints]
