--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -133,6 +133,7 @@ sqlx = "0.8.6"
 subxt = "0.41.0"
 subxt-signer = "0.41.0"
 tokio-stream = "0.1.17"
+async-stream = "0.3.6"
 
 [dev-dependencies]
 alloy-provider = { workspace = true, features = ["txpool-api"] }
