--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -118,6 +118,7 @@ tempfile.workspace = true
 itertools.workspace = true
 rand.workspace = true
 eyre.workspace = true
+indexmap = "2.0"
 
 # cli
 clap = { version = "4", features = [
