--- a/.github/workflows/nextest.yml
+++ b/.github/workflows/nextest.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          target: ${{ matrix.target }}, wasm32-unknown-unknown
+          target: ${{ matrix.target }}, wasm32v1-none
           components: rust-src
 
       # Build substrate-node (if not cached)
@@ -207,7 +207,7 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          target: wasm32-unknown-unknown
+          target: wasm32v1-none
           components: rust-src
 
       - name: Test
