--- a/.github/workflows/nextest.yml
+++ b/.github/workflows/nextest.yml
@@ -91,6 +91,8 @@ jobs:
           ./configure --prefix=/usr/local
           make
           sudo make install
+          brew install llvm@20
+          brew link llvm@20
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
