--- a/.github/workflows/nextest.yml
+++ b/.github/workflows/nextest.yml
@@ -93,6 +93,7 @@ jobs:
           sudo make install
           brew install llvm@20
           brew link llvm@20
+          ls -s /opt/homebrew/opt/llvm@20/lib/libclang.dylib /usr/lib/libclang.dylib
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
