--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -148,6 +148,7 @@ tokio-stream = "0.1.17"
 jsonrpsee = "0.24.9"
 sqlx = "0.8.6"
 indicatif.workspace = true
+cumulus-client-service = "0.27.0"
 
 [dev-dependencies]
 alloy-provider = { workspace = true, features = ["txpool-api"] }
