--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -139,7 +139,8 @@ log = { version = "0.4.21", default-features = false }
 polkadot-core-primitives = "18.0.0"
 cumulus-primitives-core = "0.21.0"
 tokio-retry = { version = "0.3.0" }
-
+hex = { version = "0.4.3", default-features = false }
+hex-literal = { version = "0.4.1", default-features = false }
 
 [dev-dependencies]
 alloy-provider = { workspace = true, features = ["txpool-api"] }
