--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -65,8 +65,8 @@ polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch 
 	"substrate-frame-rpc-system",
 	"substrate-rpc-client",
 	"substrate-wasm-builder",
-	"pallet-revive-eth-rpc",
 	"cumulus-client-service",
+	"pallet-revive-eth-rpc",
 ] }
 anvil.workspace = true
 anvil-core.workspace = true
@@ -149,6 +149,10 @@ tokio-stream = "0.1.17"
 jsonrpsee = "0.24.9"
 sqlx = "0.8.6"
 indicatif.workspace = true
+cumulus-test-relay-sproof-builder = "0.21.0"
+polkadot-primitives = "20.0.0"
+cumulus-primitives-parachain-inherent = "0.20.0"
+cumulus-pallet-parachain-system = "0.22.1"
 
 [dev-dependencies]
 alloy-provider = { workspace = true, features = ["txpool-api"] }
