--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -26,6 +26,9 @@ libsecp256k1 = { version = "0.7.0", default-features = false }
 sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
 polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false, features = [
     "sc-allocator",
+	"sc-consensus-aura",
+	"sc-consensus-manual-seal",
+	"cumulus-client-parachain-inherent",
 	"sc-basic-authorship",
 	"sc-block-builder",
 	"sc-chain-spec",
@@ -34,7 +37,6 @@ polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch 
 	"sc-client-db",
 	"sc-consensus",
 	"sc-consensus-babe",
-	"sc-consensus-manual-seal",
     "sc-executor",
 	"sc-executor-common",
 	"sc-executor-wasmtime",
@@ -132,11 +134,7 @@ tempfile.workspace = true
 itertools.workspace = true
 rand_08.workspace = true
 eyre.workspace = true
-<<<<<<< HEAD
 lru = "0.16.0"
-=======
-jsonrpsee = { version = "0.24", features = ["http-client"] }
->>>>>>> 5dfcea7c1 (Fork runtime and build chainspec)
 
 # cli
 clap = { version = "4", features = [
