--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -26,9 +26,6 @@ libsecp256k1 = { version = "0.7.0", default-features = false }
 sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
 polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false, features = [
     "sc-allocator",
-	"sc-consensus-aura",
-	"sc-consensus-manual-seal",
-	"cumulus-client-parachain-inherent",
 	"sc-basic-authorship",
 	"sc-block-builder",
 	"sc-chain-spec",
@@ -36,7 +33,7 @@ polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch 
 	"sc-client-api",
 	"sc-client-db",
 	"sc-consensus",
-	"sc-consensus-babe",
+	"sc-consensus-manual-seal",
     "sc-executor",
 	"sc-executor-common",
 	"sc-executor-wasmtime",
@@ -67,12 +64,13 @@ polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch 
 	"substrate-frame-rpc-system",
 	"substrate-rpc-client",
 	"substrate-wasm-builder",
-	"cumulus-client-service",
 	"pallet-revive-eth-rpc",
-	"pallet-revive",
-	"cumulus-primitives-parachain-inherent",
+
+	"sc-consensus-aura",
 	"polkadot-primitives",
-	"cumulus-test-relay-sproof-builder",
+	"cumulus-client-parachain-inherent",
+	"sp-arithmetic",
+
 ] }
 anvil.workspace = true
 anvil-core.workspace = true
@@ -151,10 +149,6 @@ tokio-stream = "0.1.17"
 jsonrpsee = "0.24.9"
 sqlx = "0.8.6"
 indicatif.workspace = true
-#cumulus-test-relay-sproof-builder = "0.21.0"
-#polkadot-primitives = "20.0.0"
-#cumulus-primitives-parachain-inherent = "0.20.0"
-cumulus-pallet-parachain-system = "0.22.1"
 
 [dev-dependencies]
 alloy-provider = { workspace = true, features = ["txpool-api"] }
