Use LazyLoadingBackend as default backend

--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -129,6 +129,9 @@ rand_08.workspace = true
 eyre.workspace = true
 lru = "0.16.0"
 indexmap = "2.0"
+log = { version = "0.4.21", default-features = false }
+hex-literal = { version = "0.4.1", default-features = false }
+polkadot-core-primitives = "18.0.0"
 
 # cli
 clap = { version = "4", features = [
